izrazi1/parser.output
Grammar

    0 $accept: program $end

    1 program: naredba '\n' program
    2        | naredba '\n'

    3 naredba: INT_T ID
    4        | INT_T ID '=' izraz
    5        | ID '=' izraz
    6        | PRINT_T '(' izraz ')'
    7        | PRINT_T '(' izraz ',' BROJ ')'
    8        | logicka_naredba
    9        | LIST_T ID '=' lista

   10 logicka_naredba: izraz EQ izraz
   11                | izraz NEQ izraz

   12 izraz: izraz '+' izraz
   13      | izraz '-' izraz
   14      | izraz '*' izraz
   15      | izraz '/' izraz
   16      | izraz '%' izraz
   17      | izraz '&' izraz
   18      | izraz '|' izraz
   19      | izraz '^' izraz
   20      | izraz SL izraz
   21      | izraz SR izraz
   22      | '(' izraz ')'
   23      | '-' izraz
   24      | '~' izraz
   25      | ID
   26      | BROJ
   27      | ID '[' BROJ ']'

   28 lista: '[' elementi ']'

   29 elementi: elementi ',' izraz
   30         | izraz


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '%' (37) 16
    '&' (38) 17
    '(' (40) 6 7 22
    ')' (41) 6 7 22
    '*' (42) 14
    '+' (43) 12
    ',' (44) 7 29
    '-' (45) 13 23
    '/' (47) 15
    '=' (61) 4 5 9
    '[' (91) 27 28
    ']' (93) 27 28
    '^' (94) 19
    '|' (124) 18
    '~' (126) 24
    error (256)
    NEQ (258) 11
    EQ (259) 10
    UMINUS (260)
    INT_T (261) 3 4
    ID (262) 3 4 5 9 25 27
    PRINT_T (263) 6 7
    BROJ (264) 7 26 27
    SR (265) 21
    SL (266) 20
    LIST_T (267) 9


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    program (30)
        on left: 1 2
        on right: 0 1
    naredba (31)
        on left: 3 4 5 6 7 8 9
        on right: 1 2
    logicka_naredba (32)
        on left: 10 11
        on right: 8
    izraz (33)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 4 5 6 7 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 29 30
    lista (34)
        on left: 28
        on right: 9
    elementi (35)
        on left: 29 30
        on right: 28 29


State 0

    0 $accept: • program $end

    '-'      shift, and go to state 1
    '~'      shift, and go to state 2
    INT_T    shift, and go to state 3
    ID       shift, and go to state 4
    PRINT_T  shift, and go to state 5
    BROJ     shift, and go to state 6
    LIST_T   shift, and go to state 7
    '('      shift, and go to state 8

    program          go to state 9
    naredba          go to state 10
    logicka_naredba  go to state 11
    izraz            go to state 12


State 1

   23 izraz: '-' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 14


State 2

   24 izraz: '~' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 15


State 3

    3 naredba: INT_T • ID
    4        | INT_T • ID '=' izraz

    ID  shift, and go to state 16


State 4

    5 naredba: ID • '=' izraz
   25 izraz: ID •
   27      | ID • '[' BROJ ']'

    '='  shift, and go to state 17
    '['  shift, and go to state 18

    $default  reduce using rule 25 (izraz)


State 5

    6 naredba: PRINT_T • '(' izraz ')'
    7        | PRINT_T • '(' izraz ',' BROJ ')'

    '('  shift, and go to state 19


State 6

   26 izraz: BROJ •

    $default  reduce using rule 26 (izraz)


State 7

    9 naredba: LIST_T • ID '=' lista

    ID  shift, and go to state 20


State 8

   22 izraz: '(' • izraz ')'

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 21


State 9

    0 $accept: program • $end

    $end  shift, and go to state 22


State 10

    1 program: naredba • '\n' program
    2        | naredba • '\n'

    '\n'  shift, and go to state 23


State 11

    8 naredba: logicka_naredba •

    $default  reduce using rule 8 (naredba)


State 12

   10 logicka_naredba: izraz • EQ izraz
   11                | izraz • NEQ izraz
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    NEQ  shift, and go to state 24
    EQ   shift, and go to state 25
    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35


State 13

   25 izraz: ID •
   27      | ID • '[' BROJ ']'

    '['  shift, and go to state 18

    $default  reduce using rule 25 (izraz)


State 14

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   23      | '-' izraz •

    $default  reduce using rule 23 (izraz)


State 15

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   24      | '~' izraz •

    $default  reduce using rule 24 (izraz)


State 16

    3 naredba: INT_T ID •
    4        | INT_T ID • '=' izraz

    '='  shift, and go to state 36

    $default  reduce using rule 3 (naredba)


State 17

    5 naredba: ID '=' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 37


State 18

   27 izraz: ID '[' • BROJ ']'

    BROJ  shift, and go to state 38


State 19

    6 naredba: PRINT_T '(' • izraz ')'
    7        | PRINT_T '(' • izraz ',' BROJ ')'

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 39


State 20

    9 naredba: LIST_T ID • '=' lista

    '='  shift, and go to state 40


State 21

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   22      | '(' izraz • ')'

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35
    ')'  shift, and go to state 41


State 22

    0 $accept: program $end •

    $default  accept


State 23

    1 program: naredba '\n' • program
    2        | naredba '\n' •

    '-'      shift, and go to state 1
    '~'      shift, and go to state 2
    INT_T    shift, and go to state 3
    ID       shift, and go to state 4
    PRINT_T  shift, and go to state 5
    BROJ     shift, and go to state 6
    LIST_T   shift, and go to state 7
    '('      shift, and go to state 8

    $default  reduce using rule 2 (program)

    program          go to state 42
    naredba          go to state 10
    logicka_naredba  go to state 11
    izraz            go to state 12


State 24

   11 logicka_naredba: izraz NEQ • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 43


State 25

   10 logicka_naredba: izraz EQ • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 44


State 26

   18 izraz: izraz '|' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 45


State 27

   19 izraz: izraz '^' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 46


State 28

   17 izraz: izraz '&' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 47


State 29

   12 izraz: izraz '+' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 48


State 30

   13 izraz: izraz '-' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 49


State 31

   14 izraz: izraz '*' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 50


State 32

   15 izraz: izraz '/' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 51


State 33

   16 izraz: izraz '%' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 52


State 34

   21 izraz: izraz SR • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 53


State 35

   20 izraz: izraz SL • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 54


State 36

    4 naredba: INT_T ID '=' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 55


State 37

    5 naredba: ID '=' izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 5 (naredba)


State 38

   27 izraz: ID '[' BROJ • ']'

    ']'  shift, and go to state 56


State 39

    6 naredba: PRINT_T '(' izraz • ')'
    7        | PRINT_T '(' izraz • ',' BROJ ')'
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35
    ')'  shift, and go to state 57
    ','  shift, and go to state 58


State 40

    9 naredba: LIST_T ID '=' • lista

    '['  shift, and go to state 59

    lista  go to state 60


State 41

   22 izraz: '(' izraz ')' •

    $default  reduce using rule 22 (izraz)


State 42

    1 program: naredba '\n' program •

    $default  reduce using rule 1 (program)


State 43

   11 logicka_naredba: izraz NEQ izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 11 (logicka_naredba)


State 44

   10 logicka_naredba: izraz EQ izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 10 (logicka_naredba)


State 45

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   18      | izraz '|' izraz •
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 18 (izraz)


State 46

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   19      | izraz '^' izraz •
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 19 (izraz)


State 47

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   17      | izraz '&' izraz •
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 17 (izraz)


State 48

   12 izraz: izraz • '+' izraz
   12      | izraz '+' izraz •
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 12 (izraz)


State 49

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   13      | izraz '-' izraz •
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 13 (izraz)


State 50

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   14      | izraz '*' izraz •
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    $default  reduce using rule 14 (izraz)


State 51

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   15      | izraz '/' izraz •
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    $default  reduce using rule 15 (izraz)


State 52

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   16      | izraz '%' izraz •
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    $default  reduce using rule 16 (izraz)


State 53

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   21      | izraz SR izraz •

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 21 (izraz)


State 54

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   20      | izraz SL izraz •
   21      | izraz • SR izraz

    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33

    $default  reduce using rule 20 (izraz)


State 55

    4 naredba: INT_T ID '=' izraz •
   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 4 (naredba)


State 56

   27 izraz: ID '[' BROJ ']' •

    $default  reduce using rule 27 (izraz)


State 57

    6 naredba: PRINT_T '(' izraz ')' •

    $default  reduce using rule 6 (naredba)


State 58

    7 naredba: PRINT_T '(' izraz ',' • BROJ ')'

    BROJ  shift, and go to state 61


State 59

   28 lista: '[' • elementi ']'

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz     go to state 62
    elementi  go to state 63


State 60

    9 naredba: LIST_T ID '=' lista •

    $default  reduce using rule 9 (naredba)


State 61

    7 naredba: PRINT_T '(' izraz ',' BROJ • ')'

    ')'  shift, and go to state 64


State 62

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   30 elementi: izraz •

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 30 (elementi)


State 63

   28 lista: '[' elementi • ']'
   29 elementi: elementi • ',' izraz

    ','  shift, and go to state 65
    ']'  shift, and go to state 66


State 64

    7 naredba: PRINT_T '(' izraz ',' BROJ ')' •

    $default  reduce using rule 7 (naredba)


State 65

   29 elementi: elementi ',' • izraz

    '-'   shift, and go to state 1
    '~'   shift, and go to state 2
    ID    shift, and go to state 13
    BROJ  shift, and go to state 6
    '('   shift, and go to state 8

    izraz  go to state 67


State 66

   28 lista: '[' elementi ']' •

    $default  reduce using rule 28 (lista)


State 67

   12 izraz: izraz • '+' izraz
   13      | izraz • '-' izraz
   14      | izraz • '*' izraz
   15      | izraz • '/' izraz
   16      | izraz • '%' izraz
   17      | izraz • '&' izraz
   18      | izraz • '|' izraz
   19      | izraz • '^' izraz
   20      | izraz • SL izraz
   21      | izraz • SR izraz
   29 elementi: elementi ',' izraz •

    '|'  shift, and go to state 26
    '^'  shift, and go to state 27
    '&'  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32
    '%'  shift, and go to state 33
    SR   shift, and go to state 34
    SL   shift, and go to state 35

    $default  reduce using rule 29 (elementi)
